src/tests/snapshots/niri__tests__window_opening__check_target_size@ofT-dwF1000-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\ndefault column width: F1000\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1000 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1000 × 0, bounds: 1280 × 720, states: []
size: 1000 × 1, bounds: 1280 × 720, states: [Activated]
